--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ local.properties
 /.idea/codeStyles/Project.xml
 /app/src/main/res/layout/test.xml
 /app/src/main/res/xml/test_scene.xml
+secrets.properties
