--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,31 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "config:base"
+  "extends": ["config:base"],
+
+  "packageRules": [
+    {
+      "matchManagers": ["gradle", "gradle-wrapper"],
+      "matchPackagePatterns": [
+        "^androidx\\..*",
+        "^org\\.jetbrains\\.kotlinx",
+        "^gradle$",
+        "^com\\.android\\..*",
+        "^org\\.jetbrains\\.kotlin\\..*"
+      ],
+      "enabled": false
+    },
+    {
+      "matchManagers": ["gradle", "gradle-wrapper"],
+      "matchPackagePatterns": [
+        "^(?!androidx\\.|org\\.jetbrains\\.kotlinx|gradle$|com\\.android\\.|org\\.jetbrains\\.kotlin\\.).*"
+      ],
+      "enabled": true,
+      "automerge": true
+    },
+    {
+      "matchManagers": ["gitlabci", "dockerfile"],
+      "enabled": true,
+      "automerge": true
+    }
   ]
 }
