--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     dependencies {
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.8.4"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.9.0"
     }
 }
 
 plugins {
-    id 'com.android.application' version '8.7.2' apply false
-    id 'com.android.library' version '8.7.2' apply false
-    id 'org.jetbrains.kotlin.android' version '2.1.20' apply false
+    alias(libs.plugins.android.application) apply false
+    alias(libs.plugins.android.library) apply false
+    alias(libs.plugins.kotlin.android) apply false
 }
 
 allprojects {
