--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,8 +13,8 @@ android {
         applicationId "org.torproject.vpn"
         minSdk 24
         targetSdk 35
-        versionCode 12
-        versionName "0.9.0"
+        versionCode 13
+        versionName "1.0.0Beta"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
